# deck-of-cards

./: CMakeLists.txt  Deck.cpp  Deck.h  main.cpp  test.cpp
tests/: CMakeLists.txt  test.cpp
